[gd_scene load_steps=5 format=3 uid="uid://civfrs8hk0lfm"]

[ext_resource type="Script" path="res://Characters/missile_scene.gd" id="1_w7qcd"]
[ext_resource type="SpriteFrames" uid="uid://cusxl5pvheuma" path="res://Characters/charcter_animations.tres" id="2_q786i"]
[ext_resource type="Texture2D" uid="uid://bhu1jfu3326q2" path="res://Art/UserInterfaces/Reticle.png" id="3_84cya"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5b117"]
radius = 25.22

[node name="MissileScene" type="Node2D"]
top_level = true
script = ExtResource("1_w7qcd")

[node name="MissileBird" type="Node2D" parent="."]
position = Vector2(157, -764)
rotation = 0.785398

[node name="RigidBody2D" type="StaticBody2D" parent="MissileBird"]
position = Vector2(-576, 500)
rotation = 0.785398

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MissileBird/RigidBody2D"]
sprite_frames = ExtResource("2_q786i")
animation = &"kiwi_reeves"

[node name="Area2D" type="Area2D" parent="MissileBird/RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MissileBird/RigidBody2D/Area2D"]
position = Vector2(17, 2)
shape = SubResource("CircleShape2D_5b117")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="MissileBird/RigidBody2D/Area2D/CollisionShape2D"]
rect = Rect2(-63, -50, 100, 100)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MissileBird/RigidBody2D"]
position = Vector2(17, 2)
shape = SubResource("CircleShape2D_5b117")

[node name="WarningTexture" type="TextureRect" parent="."]
offset_left = 63.0
offset_top = -74.0
offset_right = 221.0
offset_bottom = 73.0
texture = ExtResource("3_84cya")
expand_mode = 1
stretch_mode = 2

[node name="BlinkTimer" type="Timer" parent="WarningTexture"]
wait_time = 0.25
autostart = true

[node name="SwoopTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="MissileBird/RigidBody2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="MissileBird/RigidBody2D/Area2D/CollisionShape2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="WarningTexture/BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="SwoopTimer" to="." method="_on_swoop_timer_timeout"]
